<resources>
    <string name="app_name">Meet Matcher</string>
    <string name="bottom_ic_home">Home</string>
    <string name="bottom_ic_availability">Availability</string>
    <string name="bottom_ic_profile">Profile</string>

    <!--    Choose City Dialog-->
    <string name="Vancouver">Vancouver</string>
    <string name="Burnaby">Burnaby</string>
    <string name="Richmond">Richmond</string>
    <string name="Remote">Remote (Online)</string>
    <string name="PickLocation">Pick a Location</string>
    <string name="AddLocation">Add Location</string>
    <string name="chooseCity">Select a city</string>
    <string name="cafe">Cafe</string>
    <string name="library">Library</string>

    <string-array name="cafe_Van">
        <item>Aperture Cafe</item>
        <item>Coo Coo Coffee</item>
        <item>Mum\'s The Word</item>
        <item>Roots Café</item>
    </string-array>

    <string-array name="cafe_Van_ID">
        <item>ChIJDVzOUedzhlQRFR3BXQlHyYE</item>
        <item>ChIJkxHGvdZzhlQRb7NcTKnmAis</item>
        <item>ChIJxe8B78BxhlQRI_z8-jTPG0M</item>
        <item>ChIJd7UdaGl0hlQRgFRqTD0ez94</item>
    </string-array>

    <string-array name="library_Van">
        <item>VPL Central Library</item>
        <item>VPL Fraserview Branch</item>
        <item>VPL Mount Pleasant Branch</item>
        <item>VPL Renfrew Branch</item>
        <item>VPL Champlain Heights Branch</item>
    </string-array>
    <string-array name="lib_Van_ID">
        <item>ChIJQ9pJmH5xhlQRe_nvreYL37k</item>
        <item>ChIJzeiiYDB0hlQRBEz7FZR_cTY</item>
        <item>ChIJgVbiS19xhlQRsIlkAZgyZgo</item>
        <item>ChIJlUfD98d2hlQR9ljoqZ6DJ4g</item>
        <item>ChIJZVY0TdV1hlQRPiqeQcAzGgo</item>
    </string-array>

    <string-array name="cafe_Richmond">
        <item>Blenz Coffee</item>
        <item>Leisure Tea &amp; Coffee</item>
        <item>Waves Coffee House - Steveston</item>
    </string-array>
    <string-array name="cafe_Richmond_ID">
        <item>ChIJCYWlva0KhlQRKG5ftX4YLP8</item>
        <item>ChIJz-ES6C91hlQRmtuo5FGgM7M</item>
        <item>ChIJV4SF-9jhhVQR8QA2i-c3hM8</item>
    </string-array>
    <string-array name="library_Richmond">
        <item>RPL Brighouse Branch</item>
        <item>RPL Cambie Branch</item>
        <item>RPL Ironwood Branch</item>
    </string-array>
    <string-array name="library_Richmond_ID">
        <item>ChIJ1czq6MkKhlQRKN-Sm7PwU_k</item>
        <item>ChIJ08lGcw51hlQRnpbmuKTYAfE</item>
        <item>ChIJk6ONxXTghVQRd4Av3tea0IE</item>
    </string-array>

    <string-array name="cafe_Burnaby">
        <item>La Forêt</item>
        <item>JJ Bean Coffee Roasters</item>
        <item>Ki Cafe (Ki Tea House)</item>
    </string-array>
    <string-array name="cafe_Burnaby_ID">
        <item>ChIJsxzBrFx2hlQRgcWfYg58Se4</item>
        <item>ChIJXWeqtIlxhlQRIo5O_B3pCWo</item>
        <item>ChIJsXGlT0R2hlQRH35dH1YxRiU</item>
    </string-array>
    <string-array name="library_Burn">
        <item>BPL Bob Prittie Metrotown Branch</item>:0000
        <item>BPL Tommy Douglas Library</item>
        <item>BPL Cameron Branch</item>
        <item>WAC Bennett Library</item>
    </string-array>
    <string-array name="library_Burn_ID">
        <item>ChIJu0r6z-x2hlQR8MFjWyu90J8</item>
        <item>ChIJqcsB8ct3hlQRqXJN1Gi9cow</item>
        <item>ChIJN8QuuTB4hlQRi0lE87tukG4</item>
        <item>ChIJO3Ez4b95hlQRRDVh_fwNqLY</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_teams">My Teams</string>
    <string name="add_team_button">+ Add Team</string>
    <string name="change_password">Change Password</string>
    <string name="change_nickname">Change NickName</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="new_nickname">New Nickname</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="title_activity_select_meeting_details">SelectMeetingDetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="done">Done</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="or">OR</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="meet_matcher">MEET MATCHER</string>
    <string name="confirm_msg">Your registration has been successfully completed. Please sign in below to continue.</string>
    <string name="enter_email">Enter Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="init_time">00:00</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="event_detail">Event Detail</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>